...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editProfileTextView"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
...
            android:clickable="false"

            app:cardCornerRadius="80dp"
            app:cardBackgroundColor="@android:color/white"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/edit_profile_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="161dp"
            android:clickable="false"
            app:cardElevation="4dp"
            app:cardCornerRadius="80dp"
            app:cardBackgroundColor="@android:color/white">

            <ImageView
                android:id="@+id/image_inside_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"

                android:src="@drawable/guest_default_image">
            </ImageView>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/changePictureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_picture_text"
            android:textColor="@android:color/black"
            android:layout_below="@+id/edit_profile_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent">
        </Button>

        <RelativeLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_profile_image"
            android:layout_marginTop="32dp">

            <TextView
...
                android:paddingStart="10dp"
                android:paddingEnd="8dp">
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/aboutMeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneLayout"
            android:layout_marginTop="7dp">

            <TextView
...
                    android:textSize="14sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="175dp"
...
                android:text="@string/update_text">
            </Button>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/admin_wrench_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:background="@drawable/admin_wrench">
...
