<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_pic_card"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="60dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:src="@drawable/guest_default_image">
            </ImageView>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_profile_button"
            style="inter"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="25dp"
            android:layout_toEndOf="@+id/profile_pic_card"
            android:layout_toStartOf="@+id/create_event_button"
            android:background="@drawable/button_outline_white"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/edit_profile_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_event_button"
            android:layout_width="130dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button_outline_white"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/create_event_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <View
            android:id="@+id/homepage_profile_line"
            android:layout_width="245dp"
            android:layout_height="2dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="13dp"
            android:background="@color/white" />


        <TextView
            android:id="@+id/homepage_name_text"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/profile_pic_card"
            android:text="@string/guest_text"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/homepage_tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabTextColor="@color/black"
        app:tabBackground="@drawable/tab_colour_selector"
        app:tabIndicatorColor="@color/blue">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_events_text"
            android:background="@color/blue">
        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attending_events_text"
            android:background="@color/blue">
        </com.google.android.material.tabs.TabItem>
    </com.google.android.material.tabs.TabLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/homepage_tabs">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/homepage_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.viewpager2.widget.ViewPager2>
    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_bar_menu"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="labeled">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>
