<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home_text"
        android:icon="@drawable/home_button_image"
        android:id="@+id/home_button">
    </item>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/qr_text"
        android:icon="@drawable/qr_button_image"
        android:id="@+id/qr_button">
    </item>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/browse_text"
        android:icon="@drawable/browse_button_image"
        android:id="@+id/browse_button">
    </item>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/notification_text"
        android:icon="@drawable/notification_button_image"
        android:id="@+id/notification_button">
    </item>
</menu>