...
                android:layout_marginTop="10dp"
                android:layout_marginEnd="95dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/add_poster_icon" />

            <Button
                android:id="@+id/create_event_change_poster"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:layout_below="@+id/create_event_poster"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="140dp"
...
                android:text="@string/change_event_poster"
                android:textColor="@color/black" />
        </RelativeLayout>


        <TextView
            android:id="@+id/create_event_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/event_name_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blue_background" />

        <EditText
            android:id="@+id/event_name_edit_text"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:autofillHints="AUTOFILL_TYPE_TEXT"
            android:background="@drawable/button_outline_grey"
            android:hint="@string/enter_event_name_hint"
            android:inputType="textMultiLine"
...
