...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <EditText
                android:id="@+id/key_admin_text"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="key"
                android:inputType="textPersonName"
...
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:backgroundTint="@color/black"
                android:text="Cancel"/>

            <Button
                android:id="@+id/confirm_button_admin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/black"
...
