...
                android:textColor="#535353"
                app:iconifiedByDefault="false"
                app:queryHint="@string/search_with_attendee_name_text" />
        </LinearLayout>

        <ListView
            android:id="@+id/browse_users_list"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:longClickable="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loading_browse_users_text"
                android:layout_width="152dp"
                android:layout_height="44dp"
                android:fontFamily="@font/poppins_bold"
                android:text="Loading. . ."
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
...
