...
                app:iconifiedByDefault="false"
                app:queryHint="@string/search_with_event_name_text" />


        </LinearLayout>
        <ListView
            android:id="@+id/browse_event_list"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:longClickable="true" >

...
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loading_browse_events_text"
                android:layout_width="152dp"
                android:layout_height="44dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_bold"
                android:text="Loading. . ."
                android:textAlignment="center"
...
